--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -18,6 +18,7 @@
 
         <% if logged_in? %>
             <td><%= link_to 'Topics', @topics %></td>
+            <td><%= link_to 'New', new_topic_path %></td>
             <% if @is_owner %>
                 <td><%= link_to 'Edit', edit_topic_path(@topics) %></td>
             <% end %>
