--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -3,9 +3,6 @@
 <table>
   <thead>
     <tr>
-      <th>Title</th>
-      <th>Description</th>
-      <th></th>
       <th></th>
     </tr>
   </thead>
@@ -13,14 +10,17 @@
   <tbody>
 
       <tr>
-        <td><%= @topics.title %></td>
-        <td><%= @topics.description %></td>
-
         <% if logged_in? %>
-            <td><%= link_to 'Topics', @topics %></td>
+           <tr>
+            <td><%= link_to 'Enter Project Forum', @topics %></td>   </tr>
             <% if @is_owner %>
-                <td><%= link_to 'Edit', edit_topic_path(@topics) %></td>
+          <tr><td><%= link_to 'Edit', edit_topic_path(@topics) %></td></tr>
+          <tr> <td><%= link_to 'Admin Panel', users_path %></td> </tr>
+            <% else %>
+          <tr><td><%= link_to 'User Panel', users_path %></td></tr>
             <% end %>
+        <% else %>
+      <tr> <td>Register to Enter Project Forum</td> </tr>
         <% end %>
 
       </tr>
