--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,6 +22,7 @@
             <%= link_to "Login", login_path %>
             <%= link_to "Sign Up", new_user_path %>
         <% end %>
+        <td><%= link_to 'Home', topics_path %></td>
       </h6>
     </div>
   </div>
