--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -7,7 +7,11 @@
 
 <p>
   <strong>Description:</strong>
+  <tr>
+  <td>
   <%= @topic.description %>
+  <td>
+  <tr>
 </p>
 <%#TODO: Get_User_Name_of_Owner %>
 <p>
@@ -16,15 +20,15 @@
 </p>
 
 
-<% if @is_owner %>
+<% if @is_owner || current_user.id==1 %>
     <%= link_to 'Edit', edit_topic_path(@topic) %>
     <td><%= link_to 'Destroy', @topic, method: :delete, data: { confirm: 'Are you sure?' } %></td>
 <% end %>
-
+<hr>
 <h3>Topics: (<%= @topic.topics.size %>)</h3>
 <%= render partial: 'topics/topic', collection: @topic.topics %>   <%# display sub topics %>
 <%= render partial: 'topics/form' %>
-
+<hr>
 <h3>Comments: (<%= @topic.comments.size %>)</h3>
 <%= render partial: 'topics/comment', collection: @topic.comments %>
 <%= render partial: 'comments/form' %>
