--- a/app/views/users/_topic.html.erb
+++ b/app/views/users/_topic.html.erb
@@ -1,5 +1,7 @@
 <div>
-  <h4>Topic created by <%= "-User name here!-" %></h4>
+
   <p class="topic"><%= topic.title %></p>
-  <%# TODO: show%>
+  <% if logged_in? %>
+      <td><%= link_to 'Show', topic %></td>
+  <% end %>
 </div>
