--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -5,9 +5,6 @@
     <tr>
       <th>Username</th>
       <th>Email</th>
-      <th></th>
-      <th></th>
-      <th></th>
     </tr>
   </thead>
 
@@ -16,11 +13,15 @@
       <tr>
         <td><%= user.username %></td>
         <td><%= user.email %></td>
-        <td><%= user.password %></td>
-        <td><%= user.password_confirmation %></td>
-        <td><%= link_to 'Show', user %></td>
-        <td><%= link_to 'Edit', edit_user_path(user) %></td>
-        <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+
+        <% if user.id==current_user.id || current_user.id==1 %>
+            <td><%= link_to 'Show', user %></td>
+            <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+            <% if user.id==current_user.id || current_user.id!=1 %>
+                <td><%= link_to 'Edit', edit_user_path(user) %></td>
+            <% end %>
+        <% end %>
+
       </tr>
     <% end %>
   </tbody>
@@ -28,4 +29,6 @@
 
 <br>
 
-<%= link_to 'New User', new_user_path %>
+<% if current_user.id==1 %>
+    <%= link_to 'New User', new_user_path %>
+<% end %>
